# svc-scheduler

./: .commitlintrc.yml  .cspell.config.yaml  .cspell.project-words.txt  .dockerignore  .editorconfig  .env.base  .env.base.tftpl  .env.repo  .gitignore  .link-checker.config.json  .taplo.toml  .terraform_init  .tofu_init  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  docker-compose-base.yml  docker-compose.yml  log4rs.yaml  requirements.txt
.cargo/: config.toml
.cargo-husky/hooks/: README.md  commit-msg  pre-commit  pre-push
.compose/: README.md
.compose/aetheric-cache/: services.yaml
.compose/aetheric-db/: services.yaml
.compose/aetheric-db/scripts/: init-ssl.sh  init.sql
.compose/aetheric-gis/: services.yaml
.compose/aetheric-gis/scripts/: docker-entrypoint-init.sh  init-ssl.sh  init.sql
.compose/aetheric-queue/: services.yaml
.compose/aetheric-svc/: .env.vars  base.yaml  rust-test.yaml  services.yaml  svc.yaml  test-server.yaml
.compose/dozzle/: services.yaml
.compose/reverse-proxy/: services.yaml
.github/: CODEOWNERS
.github/workflows/: api_docs.yml  autosquash.yml  autoupdate.yml  editorconfig_check.yml  nightly.yml  post_release.yml  pr_rebase.yml  python_ci.yml  release.yml  release_checklist.yml  rust_ci.yml  sanity_checks.yml
.make/: base.mk  commitlint.mk  cspell.mk  docker.mk  editorconfig.mk  env.mk  markdown.mk  python.mk  rust.mk  toml.mk
client/: Cargo.toml
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  grpc.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client/examples/: client.rs
client/src/: grpc.rs  lib.rs  svc_scheduler.rs
client/tests/: integration_test.rs
docs/: conops.md  icd.md  requirements.md  sdd.md
proto/: grpc.proto  svc-scheduler-grpc.proto  svc-scheduler.proto
server/: Cargo.toml  README.md  build.rs
server/src/: calendar_utils.rs  config.rs  grpc.rs  grpc_client_wrapper.rs  lib.rs  main.rs  queries.rs  router_utils.rs  svc_scheduler.rs  test_util.rs  test_utils.rs
server/src/grpc/: client.rs  macros.rs  mod.rs  queries.rs  server.rs
server/src/grpc/api/: cancel.rs  cancel_itinerary.rs  confirm_itinerary.rs  create.rs  mod.rs  query_flight.rs
server/src/router/: README.md  flight_plan.rs  itinerary.rs  lib.rs  macros.rs  mod.rs  schedule.rs  vehicle.rs  vertiport.rs
server/src/router/router_types/: edge.rs  location.rs  mod.rs  node.rs  router.rs  status.rs
server/src/router/router_utils/: flightplan.rs  generator.rs  graph.rs  haversine.rs  mock.rs  mod.rs  router_state.rs  schedule.rs
server/src/router_types/: edge.rs  node.rs  router.rs
server/src/router_utils/: generator.rs  graph.rs  haversine.rs  router_state.rs  schedule.rs
server/src/tasks/: cancel_itinerary.rs  create_itinerary.rs  macros.rs  mod.rs  pool.rs
src/: main.rs  tmp_lib.rs
tests/: __init__.py  integration_test.rs
