[workspace]
members  = ["server", "client-grpc"]
resolver = "2"

[workspace.package]
authors      = ["arrow-services <group-services@arrowair.com>"]
edition      = "2021"
homepage     = "https://www.aetheric.nl"
license-file = "LICENSE"
repository   = "https://github.com/aetheric-oss/svc-scheduler"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
