[package]
description = "gRPC client for the scheduler service."
keywords    = ["vtol", "client", "grpc", "scheduler"]  # max 5
name        = "svc-scheduler-client-grpc"
version     = "0.3.1-develop.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
dev       = ["mock", "tokio", "futures"]
test_util = ["mock", "stub_backends"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = []
# Will use a stubbed server connection, only use for tests!
stub_backends = [
  "svc-scheduler/stub_server",
  "lib-common/grpc_mock",
  "tower",
  "tokio",
]
# Will implement stub functions for the client, only use for tests!
stub_client = ["svc-scheduler", "svc-storage-client-grpc/mock"]

[dependencies]
cfg-if          = "1.0"
chrono          = "0.4"
chrono-tz       = "0.8"
futures         = { version = "0.3", optional = true }
log             = { version = "0.4" }
prost           = "0.11"
prost-types     = "0.11"
prost-wkt-types = "0.4"
svc-scheduler   = { path = "../server", optional = true }
tonic           = "0.8"
tower           = { version = "0.4", optional = true }
uuid            = "1.2"

[dependencies.svc-storage-client-grpc]
features = ["flight_plan", "itinerary"]
git      = "https://github.com/Arrow-air/svc-storage.git"
tag      = "v0.10.1-develop.19"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.1.1-develop.2"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
optional = true
version  = "1.28"

[dev-dependencies]
logtest = "2.0"

# Make sure we enable the 'mock_services' features when running tests
[dev-dependencies.svc-scheduler-client-grpc]
features = ["dev"]
path     = "."

[[example]]
name = "grpc"
