[package]
description = "gRPC client for the scheduler service."
keywords    = ["vtol", "client", "grpc", "scheduler"]  # max 5
name        = "svc-scheduler-client-grpc"
version     = "0.4.1-develop.8"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
dev       = ["mock", "tokio", "futures"]
test_util = ["mock", "stub_backends", "tokio"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["svc-storage-client-grpc/mock"]
# Will use a stubbed server connection, only use for tests!
stub_backends = [
  "tokio",
  "svc-scheduler/stub_server",
  "lib-common/grpc_mock",
  "tower",
]
# Will implement stub functions for the client, only use for tests!
stub_client = ["svc-scheduler", "mock"]

[dependencies]
cfg-if          = "1.0"
chrono          = "0.4"
chrono-tz       = "0.8"
futures         = { version = "0.3", optional = true }
log             = { version = "0.4" }
num-derive      = "0.4"
num-traits      = "0.2"
prost           = "0.12"
prost-types     = "0.12"
prost-wkt-types = "0.5"
rand            = "0.8"
serde           = { version = "1.0", features = ["derive"] }
svc-scheduler   = { path = "../server", optional = true }
tonic           = "0.10"
tower           = { version = "0.4", optional = true }
uuid            = "1.5"

[dependencies.svc-storage-client-grpc]
features = ["flight_plan", "itinerary"]
git      = "https://github.com/aetheric-oss/svc-storage.git"
tag      = "latest-develop"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "latest-develop"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
optional = true
version  = "1.33"

[dev-dependencies]
logtest = "2.0"

# Make sure we enable the 'mock_services' features when running tests
[dev-dependencies.svc-scheduler-client-grpc]
features = ["dev"]
path     = "."

[[example]]
name = "grpc"
