[package]
edition = "2021"                 # Allowed values are 2015, 2018, 2021
name    = "svc-scheduler-client"
version = "0.1.0"
# Rust Editions: https://doc.rust-lang.org/edition-guide/index.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost       = "0.11"
prost-types = "0.11.1"
tonic       = "0.8.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
name = "svc_scheduler_client"
path = "src/lib.rs"

[[example]]
name = "client"
