[package]
description = "Fleet routing and vertiport scheduling with GRPC API."
name        = "svc-scheduler"
version     = "0.3.0"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
vendored-openssl = ['openssl/vendored']

[dependencies]
anyhow           = "1.0"
async-trait      = "0.1"
cargo-husky      = "1"
chrono           = "0.4"
chrono-tz        = "0.6"
config           = "0.13"
dotenv           = "0.15"
env_logger       = "0.10"
iso8601-duration = "0.1"
log              = "0.4"
once_cell        = "1.15"
openssl          = "0.10"
ordered-float    = { version = "3.2", features = ["serde"] }
petgraph         = "0.6"
prost            = "0.11"
prost-types      = "0.11"
quaternion       = "0.4"
rand             = "0.8"
rrule            = "0.10"
serde            = { version = "1.0", features = ["derive"] }
tokio            = { version = "1.20", features = ["full"] }
tonic            = "0.8"
tonic-health     = "0.8"
uuid             = "1.2"
vecmath          = "1.0"

[dependencies.svc-compliance-client-grpc]
git = "https://github.com/Arrow-air/svc-compliance.git"
tag = "v0.1.0"

[dependencies.svc-storage-client-grpc]
git = "https://github.com/Arrow-air/svc-storage.git"
tag = "v0.10.0"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
serial_test = "1.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[[bin]]
name = "svc-scheduler"
src  = "src/main.rs"
