[package]
description = "Arrow fleet routing and vertiport scheduling with gRPC API."
keywords    = ["vtol", "server", "grpc", "rest", "scheduler"]               # max 5
name        = "svc-scheduler"
version     = "0.4.1-develop.3"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["svc-storage-client-grpc/mock"]
# Will use a stubbed backend connection, only use for tests!
stub_backends = [
  "svc-storage-client-grpc/stub_client",
  "svc-storage-client-grpc/stub_backends",
  "svc-gis-client-grpc/stub_client",
]
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow           = "1.0"
cargo-husky      = "1"
cfg-if           = "1.0"
chrono           = { version = "0.4", features = ["serde"] }
chrono-tz        = "0.8"
clap             = { version = "4.4", features = ["derive"] }
config           = "0.13"
deadpool-redis   = { version = "0.13", features = ["serde"] }
dotenv           = "0.15"
futures          = "0.3"
geo              = "0.26"
iso8601-duration = { version = "0.2", features = ["chrono"] }
lazy_static      = "1.4"
log              = "0.4"
num-derive       = "0.4"
num-traits       = "0.2"
openssl          = "0.10"
ordered-float    = { version = "4.1", features = ["serde"] }
petgraph         = "0.6"
prost            = "0.12"
prost-types      = "0.12"
prost-wkt-types  = "0.5"
quaternion       = "1.0"
rand             = "0.8"
rrule            = "0.11"
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
tokio            = { version = "1.33", features = ["full"] }
tokio-util       = "0.7"
tonic            = "0.10"
tonic-health     = "0.10"
uuid             = { version = "1.5", features = ["serde", "v4"] }
vecmath          = "1.0"

[dependencies.lib-common]
git = "https://github.com/Arrow-air/lib-common.git"
tag = "latest-develop"

[dependencies.svc-storage-client-grpc]
features = [
  "flight_plan",
  "itinerary",
  "vehicle",
  "vertipad",
  "vertiport",
  "group",
]
git = "https://github.com/Arrow-air/svc-storage.git"
tag = "latest-develop"

[dependencies.svc-gis-client-grpc]
git = "https://github.com/Arrow-air/svc-gis.git"
tag = "latest-develop"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dev-dependencies]
logtest     = "2.0"
serial_test = "2.0"
tonic-build = "0.10"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

# Make sure we enable the required modules when running tests
[dev-dependencies.svc-scheduler]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = "0.10"
